[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "Template containing packages I commonly use"
authors = ["j1c <jaewonc78@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
graspologic = { git = "https://github.com/microsoft/graspologic.git", branch = "dev"}
jupyterlab = "^3.4.6"
typing-extensions = "^4.3"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
jupyter-book = "^0.13.1"
jupyterlab-code-formatter = "^1.5.3"
isort = "^5.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
